Fix: CHECK- and RADIO Button did not update server-side state when no SelectionListener was registered